implement column-major order for ColumnStorage; create Column type for optimal space efficiency